--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,11 +15,12 @@ jobs:
       - name: Check Node v
         run: node -v
 
-      - name: Build front
-        run: |
-          npm install
-          npm audit fix --force
-          npm run build
+      - name: npm install
+        run: npm install
+      - name: npm audit
+        run: npm audit fix --force
+      - name: Build fornt
+        run : npm run build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
