--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,14 +13,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Check Node v
-        run: node -v
+        run: |
+          node -v
+          nvm list-remote
 
       - name: npm install
-        run: npm install
-      - name: npm audit
-        run: npm audit fix --force
-      - name: Build fornt
-        run : npm run build
+        run: |
+          npm install
+          npm audit fix --forc
+          npm run build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
