--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,20 +12,18 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
-      - name: Check Node v
+      - name: install nvm
         run: |
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.1/install.sh | bash
           export NVM_DIR="$HOME/.nvm"
           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
           [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
           nvm install 12
-          nvm ls
-          
+          nvm use v12.22.12
 
       - name: npm install
         run: |
           npm install
-          npm audit fix --forc
           npm run build
 
       - name: Configure AWS credentials
