--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
           yarn install --offline
 
       - name: npm install
-        run: npm run build
+        run: yarn run build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
