--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,12 +12,18 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
-      - name: install nvm
+      - name: nvm yarn install
         run: |
+          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.1/install.sh | bash
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+          nvm install 16
+          nvm use v16
           npm install -g yarn
           yarn install --offline
 
-      - name: npm install
+      - name: yarn build
         run: yarn run build
 
       - name: Configure AWS credentials
